fixed picture alignment

--- a/style.css
+++ b/style.css
@@ -165,21 +165,29 @@ section {
 #profile {
   display: flex;
   justify-content: center;
+  align-items: center; 
   gap: 5rem;
   height: 80vh;
 }
 
-.section__pic-container {
-  display: flex;
-  height: 400px;
-  width: 400px;
-  margin: auto 0;
+.profile-pic {
+  width: 400px; 
+  height: 400px; 
+  border-radius: 50%; 
+  overflow: hidden; 
+}
+
+.profile-pic img {
+  width: 100%; 
+  height: 100%;
+  object-fit: cover; 
+  border-radius: 50%; 
 }
 
 .section__text {
-  align-self: center;
   text-align: center;
 }
+
 
 .section__text p {
   font-weight: 600;
@@ -284,7 +292,16 @@ section {
 }
 
 .about-pic {
-  border-radius: 2rem;
+  width: 1000px; 
+  height: 500px; 
+  border-radius: 5%;
+}
+.about-pic img {
+  width: 100%; 
+  height: 100%; 
+  object-fit: cover; 
+  border-radius: 5%;
+
 }
 
 .arrow {
@@ -308,11 +325,7 @@ section {
   height: 80%;
 }
 
-.section__pic-container {
-  height: 400px;
-  width: 400px;
-  margin: auto 0;
-}
+
 
 /* EXPERIENCE SECTION */
 
